--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="progressbar_margin_top">5dp</dimen>
+    <dimen name="progressbar_margin_top">15dp</dimen>
+    <dimen name="title_movie">18sp</dimen>
+    <dimen name="margin_title">3dp</dimen>
 </resources>
