--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="actionBarDivider">@color/divider</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
+        <item name="android:itemBackground">@color/menu_background</item>
+        <item name="android:textColor">@color/text_color_primary</item>
+
+
     </style>
 
 </resources>
