--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
 <resources>
     <dimen name="progressbar_margin_top">15dp</dimen>
     <dimen name="title_movie">18sp</dimen>
+    <dimen name="title_movie_detail">22sp</dimen>
+    <dimen name="average_movie_evaluation">16sp</dimen>
     <dimen name="margin_title">3dp</dimen>
 </resources>
