--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -9,14 +9,16 @@
     <TextView
         android:id="@+id/tv_movie_title_detail"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/primary_text"
-        android:textSize="@dimen/title_movie_detail"
+        android:layout_height="100dp"
         android:background="@color/menu_background"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:textAllCaps="false"
+        android:textColor="@color/text_color_primary"
+        android:textSize="@dimen/title_movie_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_movie_poster_detail"
@@ -59,11 +61,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:textAlignment="viewStart"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/average_movie_evaluation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail" />
 </android.support.constraint.ConstraintLayout>
