--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -41,6 +41,7 @@
         android:textColor="@color/primary_text"
         app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
         app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -56,8 +57,9 @@
 
     <TextView
         android:id="@+id/tv_movie_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -66,7 +68,10 @@
         android:textAlignment="viewStart"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/average_movie_evaluation"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail" />
+        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
+        app:layout_constraintTop_toBottomOf="@+id/tv_average"
+        android:scrollbars="vertical"
+        />
 </android.support.constraint.ConstraintLayout>
