--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -12,7 +12,7 @@
         android:layout_height="100dp"
         android:background="@color/menu_background"
         android:gravity="center_vertical"
-        android:paddingLeft="16dp"
+        android:paddingStart="16dp"
         android:textAllCaps="false"
         android:textColor="@color/text_color_primary"
         android:textSize="@dimen/title_movie_detail"
