--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="title_movie_detail">24sp</dimen>
     <dimen name="average_movie_evaluation">18sp</dimen>
     <dimen name="margin_title">3dp</dimen>
+    <dimen name="title_elevation">4dp</dimen>
 </resources>
