Refactor: detail adjustment to insert trailer and review

--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/tv_movie_title_detail"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:background="@color/menu_background"
         android:gravity="center_vertical"
         android:paddingStart="16dp"
@@ -27,10 +27,10 @@
         android:id="@+id/iv_movie_poster_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:src="@mipmap/ic_launcher"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/content_description_movie_poster"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail" />
 
@@ -38,20 +38,19 @@
         android:id="@+id/tv_release_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="@dimen/title_movie"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/primary_text"
-        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
-        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail"
+        android:textSize="@dimen/title_movie"
         android:textStyle="bold"
-        />
+        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
+        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail" />
 
     <TextView
         android:id="@+id/tv_average"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/average_movie_evaluation"
@@ -62,19 +61,17 @@
         android:id="@+id/tv_movie_description"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
+        android:layout_marginTop="8dp"
+        android:scrollbars="vertical"
+        android:background="@color/divider"
         android:textAlignment="viewStart"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/average_movie_evaluation"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
         app:layout_constraintTop_toBottomOf="@+id/tv_average"
-        android:scrollbars="vertical"
         />
+    <!-- TODO: change view to have videos and trailer-->
 </android.support.constraint.ConstraintLayout>
