--- a/app/src/main/res/layout-land/detail_movies.xml
+++ b/app/src/main/res/layout-land/detail_movies.xml
@@ -27,9 +27,9 @@
         android:id="@+id/iv_movie_poster_detail"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="2dp"
         android:contentDescription="@string/content_description_movie_poster"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,13 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/title_movie"
-        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
-        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail"
         android:textStyle="bold"
-        />
+        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
+        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail" />
 
     <TextView
         android:id="@+id/tv_average"
@@ -64,12 +63,14 @@
         android:id="@+id/tv_movie_description"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:paddingEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:scrollbars="vertical"
+        android:background="@color/divider"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/average_movie_evaluation"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +78,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_detail"
         app:layout_constraintTop_toBottomOf="@+id/tv_average"
-        app:layout_constraintVertical_bias="0.0"
-        android:scrollbars="vertical"
-        />
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
