--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="text_color_primary">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="divider">#0fbdbdbd</color>
     <color name="menu_background">#5c6bc0</color>
 
 </resources>
