--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="margin_title">3dp</dimen>
     <dimen name="margin_title_movie">16dp</dimen>
     <dimen name="title_elevation">4dp</dimen>
+    <dimen name="margin_detail_movie">8dp</dimen>
 </resources>
