--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -92,7 +92,20 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail"
+                android:visibility="visible"
+                />
+
+            <include
+                layout="@layout/no_internet_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail"
+                android:visibility="gone"
+                />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
