--- a/app/src/main/res/layout/detail_video_review.xml
+++ b/app/src/main/res/layout/detail_video_review.xml
@@ -3,6 +3,8 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants"
+    android:focusableInTouchMode="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.constraint.ConstraintLayout
@@ -20,6 +22,7 @@
             android:text="@string/videos"
             android:textColor="@color/primary_text"
             android:textSize="@dimen/title_movie"
+            android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +46,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_movie_videos" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_movie_videos"
+            android:focusable="false"
+            />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -62,6 +67,8 @@
             android:text="@string/reviews"
             android:textColor="@color/primary_text"
             android:textSize="@dimen/title_movie"
+            android:textStyle="bold|italic"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -86,6 +93,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_movie_reviews"
+            android:focusable="false"
             />
 
     </android.support.constraint.ConstraintLayout>
