--- a/app/src/main/res/layout-land/detail_movies.xml
+++ b/app/src/main/res/layout-land/detail_movies.xml
@@ -36,6 +36,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
         android:focusableInTouchMode="true"
         android:layout_below="@id/tv_movie_title_detail"
         android:layout_toEndOf="@id/iv_movie_poster_detail">
