--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/iv_movie_poster_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minHeight="160dp"
                 android:contentDescription="@string/content_description_movie_poster"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintStart_toStartOf="parent"
