Feature: Create favorite view menu option & change for startActivityForResult between MoviesActivity and MoviesDetailActivity to check if favorite has been changed and notify the view.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -25,7 +25,7 @@
                     android:icon="@drawable/ic_menu_thumb_up"/>
                 <item
                     android:id="@+id/menu_favorite_view"
-                    android:title="@string/top_rated"
+                    android:title="@string/favorite"
                     android:icon="@drawable/ic_favorite"/>
 
             </group>
