--- a/app/src/main/res/layout-land/detail_movies.xml
+++ b/app/src/main/res/layout-land/detail_movies.xml
@@ -88,7 +88,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_average" />
 
             <include
-                android:id="@+id/include"
                 layout="@layout/detail_video_review"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -97,7 +96,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_movie_description" />
 
             <include
-                android:id="@+id/include2"
+                android:id="@+id/ll_unavailable_internet_detail"
                 layout="@layout/no_internet_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
