Hot-fix: add id to save instance state automatically to maintain position in nested scroll view.

--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:focusableInTouchMode="true"
+        android:id="@+id/nsv_detail"
         >
 
         <android.support.constraint.ConstraintLayout
