--- a/app/src/main/res/layout-land/detail_movies.xml
+++ b/app/src/main/res/layout-land/detail_movies.xml
@@ -38,6 +38,7 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:focusableInTouchMode="true"
+        android:id="@+id/nsv_detail"
         android:layout_below="@id/tv_movie_title_detail"
         android:layout_toEndOf="@id/iv_movie_poster_detail">
 
